==> BenMatrixTSL/FlowcodeV11/CAL/ESP/ESP_CAL_ICD2.c <==
		#define ICD_ALT_CLK_PIN		12				//Hard coded to PortA pin 6 / IO12
		#define ICD_ALT_DATA_PIN	13				//Hard coded to PortA pin 7 / IO13
		  #define ICD_ALT_CLK_PIN	ICD_CLK_PIN
		  #define ICD_ALT_CLK_PIN	ICD_CLK_PIN + 32
		  #define ICD_ALT_DATA_PIN	ICD_DATA_PIN
		  #define ICD_ALT_DATA_PIN	ICD_DATA_PIN + 32
	#define ICD_START	  0x80
	#define ICD_SETBP	  0x81
	#define ICD_CLRBP	  0x82
	#define ICD_EN_IBP	  0x83
	#define ICD_DIS_IBP	  0x84
	#define ICD_EN_SBP	  0x85
	#define ICD_DIS_SBP	  0x86
	#define ICD_RD_RAM	  0x87
	#define ICD_WR_RAM	  0x88
	#define ICD_GET_ID    0x8C
	#define ICD_GET_STACK 0x8D
	#define ICD_DIS_BPS	  0x8B
	#define ICD_RESET	  0x8E
		#define ICD_RD_EE	  0x89
		#define ICD_WR_EE	  0x8A
	#define FC_MARKER(x)		{ if (ICD_Interrupt_Enable == 0)	{ ICD_Interrupt_Enable = 1; MARKER(x); ICD_Interrupt_Enable = 0; } }
	#define ICD_PUSH(x)			{ if (ICD_Interrupt_Enable == 0)	{ ICD_Interrupt_Enable = 1; PUSH(x); ICD_Interrupt_Enable = 0; } }
	#define ICD_POP()			{ if (ICD_Interrupt_Enable == 0)	{ ICD_Interrupt_Enable = 1; POP(); ICD_Interrupt_Enable = 0; } }

	void MARKER(signed int block_id)
	{
		//if (ICD_Interrupt_Enable == 0)
		//{
			portDISABLE_INTERRUPTS();						//Disable all interrupts


			unsigned char dbg_hold = 0;
			unsigned char icd_cmd;
			unsigned int address;
			unsigned char idx;
			char tempdata = 0;

			gpio_set_direction(ICD_ALT_CLK_PIN, GPIO_MODE_INPUT);			//Clock is an input
			gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_OUTPUT);			//Data is an output
			gpio_set_level(ICD_ALT_DATA_PIN, 0);		//Data is default low

			if(gpio_get_level(ICD_ALT_CLK_PIN))			//Test to see if clock input is 1
				dbg_mode = dbg_mode | 0x04;					//Enable ICD Pause
			else
				dbg_mode = dbg_mode & 0xFB;					//Disable ICD Pause

			if(dbg_mode)									//Is ICD Active?
			{
				if(dbg_mode & 0x01) dbg_hold = 0x01;		//Test for Single Step operation
				if(dbg_mode & 0x02)							//Test for Breakpoint operation and match
				{
					for(idx=0; idx<ICD_NUM_BPS; idx++)
					{
						if(block_id == brk_pnt[idx]) dbg_hold = dbg_hold | 0x02;
					}
				}

				if(dbg_mode & 0x04) 								//Test for Flowcode triggered operation
					dbg_hold = dbg_hold | 0x04;

				if(dbg_mode & 0x08) 								//Test for initial stop condition
				{
					dbg_hold = dbg_hold | 0x08;						//Place target into infinite wait mode
					dbg_mode = dbg_mode & 0xF7;						//Disable infinite wait mode for next iteration.
				}

				if(dbg_hold)										//Enter Debug mode
				{
					gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_INPUT);		//Data is an input target stopped

					if (dbg_hold & 0x08)
					{
						wait_clock(1, 0);				//Wait indefinitely for the next clock
						wait_clock(0, 0);							//Wait indefinitely for the next clock
						wait_clock(1, 0);				//Wait indefinitely for the next clock

						icd_byte_tx(dbg_mode);						//Send current ICD mode
						icd_byte_tx(block_id);						//Send block ID
						icd_byte_tx(block_id>>8);
					}
					else
					{
						if (wait_clock(1, 1))			//Wait for clock to go high
							return;
						if (wait_clock(0, 1))						//Wait for clock to go low
							return;
						if (wait_clock(1, 1))			//Wait for clock to go high
							return;

						if (icd_byte_tx(dbg_mode)) dbg_hold = 0;	//Send current ICD mode
						if (icd_byte_tx(block_id)) dbg_hold = 0;	//Send block ID
						if (icd_byte_tx(block_id>>8)) dbg_hold = 0;
					}

					while(dbg_hold)
					{
						icd_cmd = icd_byte_rx();				//Receive command byte

						switch(icd_cmd)
						{
							case ICD_START:									//Start Command

								dbg_hold = 0;								//Start the target running
								gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_OUTPUT);		//Data is an output
								gpio_set_level(ICD_ALT_DATA_PIN, 0);	//Data is default low
								wait_clock(0, 1);
								break;

							case ICD_SETBP:						//Set Breakpoint Command

								address = icd_byte_rx();					//Receive BP ID
								address = address | (icd_byte_rx() << 8);
								idx=0;										//Initialise BP counter
								while(idx < ICD_NUM_BPS && brk_pnt[idx] != -1)	//Scan for empty BP slot
									idx = idx + 1;

								if (idx == ICD_NUM_BPS)						//If breakpoint command list full
									icd_byte_tx(255);						//Let the ICD know
								else
								{
									brk_pnt[idx] = address;					//Else assign the BP ID to the BP list
									icd_byte_tx(0);							//Transmit an acknowledge
								}
								break;

							case ICD_CLRBP:						//Clear Breakpoint Command

								address = icd_byte_rx();
								address = address | (icd_byte_rx() << 8);
								idx=0;										//Initialise BP counter
								while(idx < ICD_NUM_BPS && brk_pnt[idx] != address)	//Scan for slot containing BP
									idx = idx + 1;

								if (idx == ICD_NUM_BPS)						//If breakpoint not in the list
									icd_byte_tx(255);						//Let the ICD know
								else
								{
									brk_pnt[idx] = -1;						//Else clear the BP ID from the BP list
									icd_byte_tx(0);							//Transmit an acknowledge
								}
								break;

							case ICD_EN_IBP:					//Enable indexed breakpoints Command

								dbg_mode = dbg_mode | 0x02;					//Enable indexed breakpoints
								break;

							case ICD_DIS_IBP:					//Disable indexed breakpoints Command

								dbg_mode = dbg_mode & 0xFD;					//Disable indexed breakpoints
								break;

							case ICD_EN_SBP:					//Enable step breakpoint Command

								dbg_mode = dbg_mode | 0x01;					//Enable step breakpoint
								break;

							case ICD_DIS_SBP:					//Disable step breakpoint Command

								dbg_mode = dbg_mode & 0xFE;					//Disable step breakpoint
								break;

							case ICD_RD_RAM:					//Read Byte Of RAM Command

								address = icd_byte_rx();
								address = address | (icd_byte_rx() << 8);
								icd_byte_tx(read_register(address));		//&address//Transmit the register value
								break;

							case ICD_WR_RAM:					//Write Byte Of RAM Command

								address = icd_byte_rx();
								address = address | (icd_byte_rx() << 8);
								write_register(address, icd_byte_rx());
								break;

							case ICD_DIS_BPS:					//Clear all breakpoints

								idx=0;	//init BP counter
								while (idx < ICD_NUM_BPS)
								{
									brk_pnt[idx] = -1;
									idx = idx + 1;
								}
								break;



							#ifdef MX_EE						//Is EEPROM Available?

								case ICD_RD_EE:					//Read Contents Of EEPROM Command

									address = icd_byte_rx();
									address = address | (icd_byte_rx() << 8);

									#ifdef EEWE
										while (test_bit(EECR, EEWE));
									#else
										while (test_bit(EECR, EEPE));
									#endif

									icd_byte_tx(eeprom_read_byte((unsigned char *)address));


								case ICD_WR_EE:					//Write Byte to EEPROM Command

									address = icd_byte_rx();
									address = address | (icd_byte_rx() << 8);
									tempdata = icd_byte_rx();

									#ifdef EEWE
										while (test_bit(EECR, EEWE));
									#else
										while (test_bit(EECR, EEPE));
									#endif

										eeprom_write_byte((unsigned char *)address, tempdata);
									break;
							#endif								//End of EEPROM code

							case ICD_GET_ID:
								icd_byte_tx(ICD_ID0);
								icd_byte_tx(ICD_ID1);
								icd_byte_tx(ICD_ID2);
								icd_byte_tx(ICD_ID3);
								icd_byte_tx(ICD_ID4);
								icd_byte_tx(ICD_ID5);
								icd_byte_tx(ICD_ID6);
								icd_byte_tx(ICD_ID7);
								break;

							case ICD_GET_STACK:
								icd_byte_tx(ICD_STACK_SIZE+1);		//+1 because the PPP firmware does not expect the stack pointer return as well
								icd_byte_tx(icd_stack_ptr);
								for (idx=0; idx<ICD_STACK_SIZE; idx++)
								{
									icd_byte_tx(icd_stack[idx]);
								}
								break;

							case ICD_RESET:
								rst_dev();
								break;

							default:
								break;
						}
					}
				}
				gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_OUTPUT);				//Data line as output
				gpio_set_level(ICD_ALT_DATA_PIN, 0);			//Data output low
			}

			portENABLE_INTERRUPTS();							//Restore all interrupts
		//}
	}

	char icd_byte_tx(char data)
	{
		char count, mask;

		gpio_set_direction(ICD_ALT_CLK_PIN, GPIO_MODE_INPUT);					//Clock line as input
		gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_OUTPUT);				//Data line as output
		gpio_set_level(ICD_ALT_DATA_PIN, 0);				//Data is 0 RTS

		if (wait_clock(0, 1))								//Wait for clock to go low
			return 255;

		for(count=0; count<8; count++)
		{
			mask = data & 0x01;						//Prepare data
			if(mask)								//Write data onto data line
				gpio_set_level(ICD_ALT_DATA_PIN, 1);
			else
				gpio_set_level(ICD_ALT_DATA_PIN, 0);
			data = data >> 1;
			if (wait_clock(1, 1))				//Wait for clock to go high
				return 254;
			if (wait_clock(0, 1))							//Wait for clock to go low
				return 253;
		}

		gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_INPUT);				//Data line as input end of byte
		if (wait_data(0))									//Wait for byte acknowledge
				return 252;
		if (wait_clock(1, 1))					//Wait for byte acknowledge end
				return 251;
		return 0;									//Success!
	}

	char icd_byte_rx(void)
	{
		unsigned char data = 0;
		unsigned char count;

		gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_INPUT);			//Data line as input
		gpio_set_direction(ICD_ALT_CLK_PIN, GPIO_MODE_INPUT);				//Clock line as input
		for(count=0; count<8; count++)					//Receive Byte
		{
			data = data >> 1;
			if (wait_clock(0, 1))						//Wait for clock to go low
				return 0;

			if (gpio_get_level(ICD_ALT_DATA_PIN)) 	//Read incoming data on data pin
				data = data | 0x80;

			if (wait_clock(1, 1))			//Wait for clock to go high
				return 0;
		}

		if (wait_data(1))					//Wait for data to go high
			return 0;

		if (wait_clock(0, 1))							//Wait for clock to go low
			return 0;

		gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_OUTPUT);			//ICD data is an output
		gpio_set_level(ICD_ALT_DATA_PIN, 0);		//ICD data 0 send Ack

		if (wait_clock(1, 1))				//Wait for clock to go high
			return 0;

		gpio_set_direction(ICD_ALT_DATA_PIN, GPIO_MODE_INPUT);			//ICD data clear ack
		return(data);
	}

	void rst_dev()
	{
		esp_restart();
	}
